# WATCHDOG

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy-watchdog.yml
alembic/: env.py
alembic/versions/: 20260522_add_auth_hardening_fields.py  20260522_add_email_verification_fields.py  20260522_sync_watchdog_v21_schema.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: main.tsx  services.ts  styles.css  types.ts
frontend/src/lib/: api.ts
frontend/src/ui/: App.tsx
scripts/: register_telegram_webhook.py  run_worker.py  seed_db.py  verify_fresh_migrations.py
src/monitoring/: __init__.py  config.py  database.py  dependencies.py  main.py
src/monitoring/alerting/: __init__.py  addressing.py  base.py  email.py  slack.py  telegram.py  transactional_email.py  webhook.py
src/monitoring/api/v1/: __init__.py  alert_channels.py  alerts.py  auth.py  checks.py  (+7 more)
src/monitoring/core/: security.py
src/monitoring/dashboard/: index.html
src/monitoring/models/: __init__.py  alert.py  base.py  check_result.py  client.py  heartbeat.py  incident.py  monitor.py  notification.py  organization.py  status_page.py  user.py
src/monitoring/schemas/: __init__.py  alert.py  auth.py  check.py  client.py  heartbeat.py  incident.py  monitor.py  notification.py  organization.py  report.py  status_page.py  telegram.py
src/monitoring/services/: __init__.py  alert_service.py  auth_service.py  checker_service.py  client_service.py  heartbeat_service.py  incident_service.py  monitor_service.py  notification_service.py  organization_service.py  rate_limit_service.py  rate_limiter.py  report_service.py  rule_engine.py  status_page_service.py  telegram_service.py
src/monitoring/utils/: __init__.py  exceptions.py  logging.py  url_safety.py
src/monitoring/workers/: __init__.py  alert_worker.py  notification_worker.py  scheduler.py
tests/: conftest.py
tests/integration/: test_migrations.py
tests/integration/test_api/: test_alert_channels_api.py  test_alerts_api.py  test_auth_organizations_api.py  test_clients_status_pages_api.py  test_heartbeats_api.py  test_incidents_api.py  test_monitors_api.py  test_reports_api.py
tests/unit/test_alerting/: test_alerting.py  test_transactional_email.py
tests/unit/test_models/: test_models.py
tests/unit/test_schemas/: test_schemas.py
tests/unit/test_services/: test_alert_service.py  test_checker_service.py  test_heartbeat_service.py  test_incident_service.py  test_monitor_service.py  test_notification_service.py  test_rule_engine.py
tests/unit/test_utils/: test_url_safety.py
tests/unit/test_workers/: test_scheduler.py
(+1 files in other folders)
