[tool.poetry]
name = "monitoring-platform"
version = "1.0.0"
description = "Production-grade microservices monitoring and alerting platform"
authors = ["Monitoring Team"]
readme = "README.md"
packages = [{include = "monitoring", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
sqlalchemy = "2.0.25"
asyncpg = "0.29.0"
alembic = "1.13.1"
httpx = "0.26.0"
aiosqlite = "0.19.0"
structlog = "24.1.0"
python-multipart = "0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
pytest-cov = "4.1.0"
mypy = "1.8.0"
ruff = "0.1.14"
autoflake = "2.2.1"
radon = "6.0.1"
pre-commit = "3.6.0"
httpx = "0.26.0"
aiosqlite = "0.19.0"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "structlog.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/monitoring",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",  # enforced - suite must maintain 80%
    "-v",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (no external services required)",
    "integration: Integration tests (uses in-memory SQLite)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/workers/*",
    "*/scripts/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
